--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container even-columns">
 
-     
+    <div class="flex gap-1">
+        <a href="" class="btn btn-sm">Label</a>
+        <a href="" class="btn btn-md">Label</a>
+        <button class="btn btn-lg primary">Label</button>
     </div>
+    
+    <div class="flex gap-1">
+        <a aria-label="Label" href="" class="btn btn-sm"></a>
+        <a aria-label="Label" href="" class="btn btn-md"></a>
+        <button aria-label="Label" class="btn btn-lg primary"> </button>
+    </div>
+
+
 </body>
 </html>
