--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <div>
 
                     <head>
-                        <strong>download</strong>
+                        <strong><a href="">DOWNLOAD</a></strong>
                         <h2>Bora cantar?</h2>
                     </head>
                     <p>Desperte seu potencial de estrela, liberte sua voz e faça parte da comunidade musical mais
@@ -236,52 +236,52 @@
 
             <section class="grid top">
 
-            <img src="assets/icons/logo.svg" alt="">
-        
-
-        <nav class="even-columns">
-            <ul role="list" class="grid gap-1.5">
-                <li class="title">Produto</li>
-
-                <li><a href="#features">Funcionalidades</a></li>
-
-                <li><a href="#pricing">Planos e preços</a></li>
-
-                <li><a href="#download">Download</a></li>
-            </ul>
-
-            <ul role="list" class="grid gap-1.5">
-                <li class="title">Empresa</li>
-                <li><a href="#about">Sobre nós</a></li>
-                <li><a href="#">Trabalhe conosco</a></li>
-                <li><a href="#">Blog</a></li>
-
-            </ul>
+                <img src="assets/icons/logo.svg" alt="">
 
 
-            <ul role="list" class="grid gap-1.5">
-                <li class="title">Legal</li>
-                <li><a href="#">Termos de uso</a></li>
-                <li><a href="#">Política de privacidade</a></li>
+                <nav class="even-columns">
+                    <ul role="list" class="grid gap-1.5">
+                        <li class="title">Produto</li>
+
+                        <li><a href="#features">Funcionalidades</a></li>
+
+                        <li><a href="#pricing">Planos e preços</a></li>
+
+                        <li><a href="#download">Download</a></li>
+                    </ul>
+
+                    <ul role="list" class="grid gap-1.5">
+                        <li class="title">Empresa</li>
+                        <li><a href="#about">Sobre nós</a></li>
+                        <li><a href="#">Trabalhe conosco</a></li>
+                        <li><a href="#">Blog</a></li>
+
+                    </ul>
 
 
-            </ul>
+                    <ul role="list" class="grid gap-1.5">
+                        <li class="title">Legal</li>
+                        <li><a href="#">Termos de uso</a></li>
+                        <li><a href="#">Política de privacidade</a></li>
 
 
-        </nav>
-    </section>
+                    </ul>
 
-    <section class="bottom flex">
-        <div class="flex gap-1.5">
-            <a href="" class="social" aria-label="tiktok"></a>
-            <a href="" class="social" aria-label="instagram"></a>
-            <a href="" class="social" aria-label="twitter"></a>
-            <a href="" class="social" aria-label="discord"></a>
+
+                </nav>
+            </section>
+
+            <section class="bottom flex gap-1.5">
+                <div class="flex gap-1.5">
+                    <a href="" class="social" aria-label="tiktok"></a>
+                    <a href="" class="social" aria-label="instagram"></a>
+                    <a href="" class="social" aria-label="twitter"></a>
+                    <a href="" class="social" aria-label="discord"></a>
+                </div>
+                <span class="copy">©2024 Zingen Technologies, Inc.</span>
+            </section>
+
         </div>
-        <span class="copy">©2024 Zingen Technologies, Inc.</span>
-    </section>
-
-    </div>
     </footer>
 
 
